# Marketing-AI-MultiAgent

./: README.md  pyproject.toml  st_main.py
src/marketing_agent/: crew.py  main.py
src/marketing_agent/config/: agents.yaml  tasks.yaml
